# ember-bridge

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: README.md  adding-machines.md  connecting-ember.md  dongle-setup.md  getting-started.md  index.html  sending-designs.md  troubleshooting.md
examples/: ember-demo.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  logging.rs  main.rs
src-tauri/src/brother/: client.rs  discovery.rs  mod.rs  models.rs  protocol.rs
src-tauri/src/dongle_setup/: link.rs  mod.rs
src-tauri/src/emberconnect/: client.rs  discovery.rs  mod.rs  models.rs  tokens.rs
src-tauri/src/machine/: error.rs  mod.rs  models.rs  net.rs
src-tauri/src/server/: auth.rs  error.rs  jobs.rs  mod.rs  pairing.rs  routes.rs  state.rs
src-tauri/tests/: api.rs  emberconnect.rs
src/api/: client.ts  dongle.ts  types.ts
src/components/: Markdown.tsx  ui.tsx
src/hooks/: useBridge.tsx  usePolling.ts
src/lib/: format.ts
src/pages/: HelpPage.tsx  LogsPage.tsx  MachinesPage.tsx  SendPage.tsx  SettingsPage.tsx  SetupPage.tsx
