[package]
name = "ember-bridge"
version = "0.2.0"
description = "Ember Bridge — desktop bridge between the Ember embroidery editor and WiFi-capable embroidery machines"
authors = ["Ember"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ember_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime + local HTTP server
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "fs"] }
axum = "0.8"

# Machine HTTP client.
#
# IMPORTANT: `native-tls` (SecureTransport / SChannel / OpenSSL) is required, NOT
# rustls. Brother machines negotiate TLS_RSA_WITH_AES_256_GCM_SHA384 (static RSA
# key exchange, no forward secrecy). rustls deliberately does not implement
# static-RSA cipher suites, so a rustls client cannot complete the handshake.
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "stream", "json"] }

thiserror = "2"
async-trait = "0.1"

# EmberConnect dongle discovery (the dongle announces _ember-connect._tcp).
mdns-sd = "0.13"
# EmberConnect desktop setup — the dongle's CDC-ACM serial port over USB.
serialport = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
if-addrs = "0.13"
futures = "0.3"
bytes = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
